Add new improvements in README and screen bases
- Change error message for empty string
- Add new tip to windows users

--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -121,7 +121,7 @@ class AndroidScreenBase < Calabash::ABase
   # Negation indicates that we want a page that doesn't
   # has the message passed as parameter
   def is_on_page?(page_text, negation = '')
-  fail 'Unexpected Page. Enter with a valid message' if
+  fail 'Error! Invalid query string!' if
        page_text.to_s == ''
 
     should_not_have_exception = false
