--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -122,7 +122,7 @@ class AndroidScreenBase < Calabash::ABase
 
   # Negation indicates that we want a page that doesn't
   # has the message passed as parameter
-  def is_on_page?(page_text, negation = '')
+  def is_on_page!(page_text, negation = '')
   fail 'Error! Invalid query string!' if
        page_text.to_s == ''
 
