--- a/lib/templates/ios_screen_base.tt
+++ b/lib/templates/ios_screen_base.tt
@@ -144,7 +144,7 @@ class IOSScreenBase < Calabash::IBase
 
   # Negation indicates that we want a page that doesn't has
   # the message passed as parameter
-  def is_on_page?(page_text, negation = '')
+  def is_on_page!(page_text, negation = '')
   fail 'Error! Invalid query string!' if
        page_text.to_s == ''
 
