--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -122,6 +122,19 @@ class AndroidScreenBase < Calabash::ABase
 
   # Negation indicates that we want a page that doesn't
   # has the message passed as parameter
+  def is_on_page?(page_text, negation = '')
+  fail 'Error! Invalid query string!' if
+       page_text.to_s == ''
+    begin
+      is_on_page!(page_text, negation)
+    rescue
+      return false
+    end
+     true
+  end
+
+  # Negation indicates that we want a page that doesn't
+  # has the message passed as parameter
   def is_on_page!(page_text, negation = '')
   fail 'Error! Invalid query string!' if
        page_text.to_s == ''
