Rename variable name to conform code pattern and delete redundant code Pattern from the repository.

--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -189,17 +189,16 @@ class AndroidScreenBase < Calabash::ABase
   # @param [String] id The view's id
   # @param [String] The complete view query (optional)
   # @return [Array] return an array[String] associated with the views
-  def text_array_from(id, query_text = nil)
-    query_text = "* id:'#{id}'" if query_text.nil?
-    array_text = query(query_text, :text)
-    array_text
+  def text_array_from(id, query = nil)
+    query = "* id:'#{id}'" if query.nil?
+    query(query, :text)
   end
 
   # @param [String] id The view's id
   # @param [String] The complete view query (optional)
   # @return [String] returns a string associated with a single view
-  def text_from(id, query_text = nil)
-    text_array_from(id, query_text).first
+  def text_from(id, query = nil)
+    text_array_from(id, query).first
   end
 
 
