Change method to enter text
- new method prevents display keyboard after tntering text

--- a/lib/templates/android_screen_base.tt
+++ b/lib/templates/android_screen_base.tt
@@ -159,12 +159,12 @@ class AndroidScreenBase < Calabash::ABase
       should_have_exception
   end
 
-  def enter(text, element, query = nil)
-    if query.nil?
-      query("* marked:'#{element}'", setText: text.to_s)
-    else
-      query(query, setText: text.to_s)
-    end
+  def enter(text, element)
+    touch("* id:'#{element}'")
+
+    enter_text("* id:'#{element}'", text)
+
+    hide_soft_keyboard
   end
 
   def touch_screen_element(element, query = nil)
