Adding method to create an OS independant feature to appium

--- a/lib/templates/appium_screen.tt
+++ b/lib/templates/appium_screen.tt
@@ -1,4 +1,4 @@
-class <%= config[:name] %>Screen < <%= config[:platform] %>ScreenBase
+class <%= config[:name] %>Screen < BaseScreen
   # <%= I18n.translate 'comments.trait' %>
   # trait(:trait)                 { pending 'Element type', 'identificator', 'options' }
 
