Remove the screen base code

--- a/lib/templates/appium_base_screen.tt
+++ b/lib/templates/appium_base_screen.tt
@@ -1,35 +1,6 @@
-#code from https://github.com/oscartanner/screen_element
-require 'ruby_lib'
+require 'appium_lib'
 
 class ScreenBase
-   def self.element(name, type = :pending, identificator = '', opt = {})
-     define_method(name.to_s) { Element.new type, identificator, opt}
-   end
-
-   attr_accessor :element
-
-   def initialize(type, identificator, opt = {})
-     @index = opt.fetch(:index, nil)
-
-     case type
-       when :desc
-         @type = :xpath
-         @identificator = "//*[@content-desc='#{identificator}']"
-       when :text
-         @type = :xpath
-         @identificator = "//*[@text='#{identificator}']"
-       when :element
-         @type = type
-         @identificator = identificator
-         @element = identificator
-       when :index
-         raise 'Index not informed!' if @index.nil?
-         @type = :id
-         @identificator = identificator
-       else
-         type = opt.fetch(:array_type, :id) if type == :array
-         @type = type
-         @identificator = identificator
-     end
-   end
+   # TODO check nice methods to include here
+   # insert the method to the same behavior between platforms
 end
