Modify appium base screen template
Now appium base screen can be automated like calabash screen

--- a/lib/templates/appium_screen.tt
+++ b/lib/templates/appium_screen.tt
@@ -1,8 +1,7 @@
 class <%= config[:name] %>Screen < BaseScreen
   # <%= I18n.translate 'comments.trait' %>
-  # trait(:trait, :element_type, "#{layout_name}")
-
-  # <%= I18n.translate 'comments.elements' %>
-  # element(:layout_name, :element_type, 'identificator')
-  # element(:name_field, :element_type, 'identificator')
+  #trait(:trait)                 { "'#{layout_name}'" }
+# <%= I18n.translate 'comments.elements' %>
+  # element(:layout_name)         { pending 'Insert button identificator' }
+  # element(:button)              { pending 'Insert button identificator' }
 end
