Change default element created on baseScreen
- Change the method name to identificator, because the element name
overriding the appium element class and the driver dont start.
- Create check_trait method
- adding automationName to android caps to avoid problems on locate
elements on the screen
- Change appium Screen template
- Bumped the gem to 1.0.4

--- a/lib/templates/appium_base_screen.tt
+++ b/lib/templates/appium_base_screen.tt
@@ -1,13 +1,19 @@
 require 'appium_lib'
 
 class BaseScreen
-   def self.element(element_name, &block)
+   def self.identificator(element_name, &block)
      define_method(element_name.to_s, *block)
    end
 
    class << self
-     alias_method :value, :element
-     alias_method :action, :element
-     alias_method :trait, :element
+     alias_method :value, :identificator
+     alias_method :action, :identificator
+     alias_method :trait, :identificator
+   end
+
+   def check_trait(timeout = 10)
+     raise ElementNotFoundError,
+        "#{trait} not found" unless
+        wait_true(timeout) { find_element(:id, trait).displayed? }
    end
 end
